# livox_camera_calibration

./: .gitignore  README.md  game_close_save.sh  game_far_save.sh  save.sh
.cache/clangd/index/: CameraParams.h.80327E77BE411775.idx  MvCameraControl.h.75D33665D926C128.idx  MvErrorDefine.h.3BF1AD6904C0AF7A.idx  PixelType.h.C84227E165B26654.idx  hik_camera_node.cpp.3E67AD2FA5FB8B09.idx
src/lidar_camera_calib/: CMakeLists.txt
src/lidar_camera_calib/config/: calib.yaml  config_indoor.yaml  config_outdoor.yaml
src/lidar_camera_calib/include/: lidar_camera_calib.hpp
src/lidar_camera_calib/result/: extrinsic.txt
src/lidar_camera_calib/src/: lidar_camera_calib.cpp
src/ros2-hik-camera-main/: CMakeLists.txt
src/ros2-mindvision-camera/config/: camera_params.yaml
src/save_img/: CMakeLists.txt  package.xml
src/save_img/include/: save_img.hpp
src/save_img/src/: save_close_img.cpp  save_far_img.cpp  save_img.cpp
src/save_pcd/: CMakeLists.txt  package.xml
src/save_pcd/include/: save_pcd.hpp
src/save_pcd/src/: save_pcd.cpp
